# sia-scraper

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  ISSUE_40_EXECUTION_PLAN.md  ISSUE_54_EXECUTION_PLAN.md  MIGRATION_PLAN.md  Makefile  PR67_REVIEW_BREAKDOWN.md  README.md  build.rs  pyproject.toml  pyrightconfig.json
.cargo/: config.toml  config.toml.example
.github/workflows/: build-wheels.yml  close-fixture-issue.yml  constants-sync-check.yml  docs.yml  fuzz.yml  integration-live.yml  recapture-fixtures.yml  rust.yml  test.yml
benchmarks/: .gitignore  benchmark_http_async.py  benchmark_parsing.py  benchmark_phase7.py  benchmark_rust_vs_python.py  profile_scraper.py
docs/: DEBUGGING.md  DIAGNOSTICS.md  MIGRATION_PHASE3.md  MIGRATION_STATUS.md  MIGRATION_v1.0.md  MIGRATION_v2.md  QUIRKS.md  RUST_THIN_WRAPPER_PLAN.md  SYNC_API_REFERENCE.md  TECHNICAL_DEBT_AUDIT.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_extract_view_state.rs  fuzz_get_course_list.rs  fuzz_get_plain_text.rs
rust/proptest-regressions/tests/: test_property.txt
rust/src/: constants.rs  error.rs  lib.rs  patterns.rs
rust/src/http/: client.rs  config.rs  errors.rs  mod.rs  py_session.rs  retry.rs  session.rs  sia_session.rs  types.rs
rust/src/models/: course.rs  helpers.rs  mod.rs  prerequisite.rs  scrape_result.rs  session.rs
rust/src/parsers/: adf.rs  adf_request.rs  course_parser.rs  mod.rs  table_parser.rs  utils.rs
rust/src/testing/: analysis.rs  config.rs  mod.rs  server.rs  types.rs
rust/src/tests/: mod.rs  test_adf.rs  test_adf_request.rs  test_course_parser.rs  test_property.rs
scripts/: README.md  capture_config.yaml  capture_sia_fixtures.py  check-python.sh  check-rust.sh  check.sh  check_constants_sync.py  lint-python.sh  lint-rust.sh  sync_rust_extension.py  test-python-cov.sh  test-python.sh  test-rust.sh  verify_type_stubs.py
src/sia_scraper/: __init__.py  constants.py  date_formatter.py  decorators.py  enhanced_session.py  exceptions.py  html_parser.py  oracle_adf_request.py  parsers.py  scraper.py  scraper_async.py  session.py  session_async.py
src/sia_scraper/constants/: __init__.py  actions.py  adf_events.py  adf_ids.py  business.py  data_map.py  defaults.py  errors.py  http.py  status.py
src/sia_scraper/core/: __init__.py  adf_context.py  adf_state.py  adf_state_manager.py  exceptions.py  navigation_controller.py  oracle_adf_request.py
src/sia_scraper/models/: __init__.py  course.py  prerequisite.py  session.py
src/sia_scraper/parsers/: __init__.py  course_parser.py  html_parser.py  models.py
src/sia_scraper/utils/: __init__.py  debug.py  decorators.py
src/sia_scraper_rust/: __init__.py
stubs/: sia_scraper_rust.pyi
tests/: conftest.py  test_constants.py  test_context_manager.py  test_contracts.py  test_course_parser.py  test_course_parser_schedules.py  test_date_formatter.py  test_decorators.py  test_enhanced_session.py  test_error_handling.py  test_exceptions.py  test_failure_recovery.py  test_fixtures_validity.py  test_integration.py  test_regression.py  test_rust_parity.py  test_scraper.py  test_scraper_async.py  test_session.py  test_session_async.py  test_session_concurrency.py  test_session_typed_bridge.py
tests/constants/: __init__.py  test_actions.py  test_adf_events.py  test_adf_ids.py  test_business.py  test_constants_integration.py  test_data_map.py  test_http.py  test_status.py
tests/core/: test_adf_state.py  test_adf_state_manager.py  test_enhanced_session.py  test_exception_integration.py  test_exceptions.py  test_navigation_controller.py  test_oracle_adf_request.py  test_session_viewstate.py
tests/fixtures/: README.md  __init__.py  factories.py  test_fixtures_validity.py  test_regression.py
tests/fixtures/baselines/: parser_baseline_2026-03-29.json  parser_baseline_2026-03-30.json
tests/fixtures/html/: career_page_electives_2026-03-29.html  career_page_electives_2026-03-30.html  initial_page_2026-03-29.html  initial_page_2026-03-30.html  session_timeout_2026-03-29.html  session_timeout_2026-03-30.html
tests/fixtures/json/: course_list_electives_2026-03-30.json  course_list_regular_2026-03-30.json  session_data_2026-03-29.json  session_data_2026-03-30.json
tests/fixtures/xml/: adf_dropdown_response_2026-03-29.xml  adf_dropdown_response_2026-03-30.xml  adf_error_response_2026-03-30.xml  course_detail_0_2026-03-29.xml  course_detail_0_2026-03-30.xml  course_detail_1_2026-03-30.xml  course_detail_2_2026-03-29.xml  course_elective_1_2026-03-29.xml  course_elective_1_2026-03-30.xml
tests/fixtures/xml/edge_cases/: __init__.py  condition_with_3_headers.xml  course_missing_credits_span.xml  course_no_groups.xml  group_empty_faculty.xml  group_with_3_divs.xml  group_with_5_divs.xml
tests/integration/: test_phase7_workflow.py
tests/models/: test_course_typed_models.py  test_model_integration.py  test_prerequisite_typed_models.py  test_session_typed_models.py
tests/parsers/: test_course_parser.py  test_course_parser_edge_cases.py  test_course_parser_properties.py  test_course_parser_typed_bridge.py  test_course_parser_typed_properties.py  test_html_parser.py  test_models.py  test_models_validation.py  test_parser_structure_validation.py  test_prereq_parser_typed_bridge.py  test_prereq_parser_typed_properties.py
tests/rust/: __init__.py  test_batch_scraping.py  test_concurrent_session.py  test_error_transparency.py  test_py_session.py  test_pyclass_models.py
tests/utils/: test_date_formatter.py  test_debug.py  test_decorators.py
