[package]
name = "sia-scraper"
version = "0.1.0"
edition = "2021"
description = "Rust extensions for sia-scraper"

[lib]
name = "sia_scraper_rust"
crate-type = ["cdylib"]
path = "rust/src/lib.rs"

[features]
default = ["extension-module"]
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
scraper = "0.20"
quick-xml = "0.31"
thiserror = "1.0"
log = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
