[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sia-scraper"
version = "0.1.0"
description = "Library to extract academic information from the SIA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests~=2.32.3",
    "lxml~=4.9.2"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-mock",
    "pytest-cov",
    "pyright",
    "lxml-stubs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "__pycache__",
    "Shared",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["sia_scraper"]

[tool.pytest.ini_options]
markers = [
    "unit: marks unit tests",
    "integration: marks tests that make real HTTP requests to SIA",
    "network: marks tests that require network connectivity to SIA",
]
