[build-system]
requires = ["setuptools>=61.0", "maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["extension-module"]
module-name = "sia_scraper_rust"
manifest-path = "Cargo.toml"
python-source = "src"
python-packages = ["sia_scraper", "sia_scraper_rust"]

[project]
name = "sia-scraper"
version = "3.0.0-beta.1"
description = "Library to extract academic information from the SIA"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lxml~=5.2.0",
    "cssselect~=1.2.0",
    "pydantic>=2.0,<3.0",
    "loguru~=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-httpserver~=1.0.0",
    "pyright",
    "ruff~=0.15.8",
    "lxml-stubs",
    "pyyaml",
    "hypothesis",
]

[tool.pytest.ini_options]
markers = [
    "unit: marks unit tests",
    "integration: marks tests that make real HTTP requests to SIA",
    "network: marks tests that require network connectivity to SIA",
]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sia_scraper*"]

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".venv",
    "venv",
    "__pypackages__",
    "__pycache__",
    "Shared",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["sia_scraper"]
